nextcloud/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: nextcloud
  name: nextcloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: nextcloud-config-claim
      - name: data
        persistentVolumeClaim:
          claimName: nextcloud-data-claim
      - name: local-home
        persistentVolumeClaim:
          claimName: nextcloud-local-home-claim
      - name: nfs-sd
        nfs:
          server: 192.168.0.7
          path: /opt/nfs/sd
      - name: nextcloud-db
        persistentVolumeClaim:
          claimName: nextcloud-db-claim
      containers:
      - name: nextcloud
        image: linuxserver/nextcloud
        ports:
        - containerPort: 443
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data
          name: data
        - mountPath: /ext-data/home/jphuc96
          name: local-home
        - mountPath: /ext-data/nfs/sd
          name: nfs-sd
      - name: nextcloud-db
        image: mariadb
        args:
        - --transaction-isolation=READ-COMMITTED
        - --binlog-format=ROW
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: nextcloud-db
      restartPolicy: Always
status: {}
