nextcloud/nextcloud-db-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: nextcloud-db
  name: nextcloud-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: nextcloud-db
    spec:
      containers:
      - args:
        - --transaction-isolation=READ-COMMITTED
        - --binlog-format=ROW
        image: mariadb
        name: nextcloud-db
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: nextcloud-db
      restartPolicy: Always
      volumes:
      - name: nextcloud-db
        persistentVolumeClaim:
          claimName: nextcloud-db-claim
status: {}
