nextcloud/nextcloud-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: nextcloud
  name: nextcloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: nextcloud
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: nextcloud
        - name: MYSQL_HOST
          value: nextcloud-db.default.svc.cluster.local
        - name: MYSQL_PASSWORD
          value: nextcloud
        - name: MYSQL_USER
          value: nextcloud
        - name: PGID
          value: "1000"
        - name: PUID
          value: "1000"
        image: linuxserver/nextcloud
        name: nextcloud
        ports:
        - containerPort: 443
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data
          name: data
        - mountPath: /ext-data/home/jphuc96
          name: local-home
        - mountPath: /ext-data/opt
          name: local-opt
      restartPolicy: Always
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: nextcloud-config-claim
      - name: data
        persistentVolumeClaim:
          claimName: nextcloud-data-claim
      - name: local-home
        persistentVolumeClaim:
          claimName: nextcloud-local-home-claim
      - name: local-opt
        persistentVolumeClaim:
          claimName: nextcloud-local-opt-claim
status: {}
