nextcloud/nextcloud-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert
    kompose.version: 1.16.0 (0c01309)
    ingress.appscode.com/backend-tls: ssl verify none
  creationTimestamp: null
  labels:
    io.kompose.service: nextcloud
  name: nextcloud
spec:
  ports:
  - name: "443"
    port: 443
    targetPort: 443
  selector:
    io.kompose.service: nextcloud
status:
  loadBalancer: {}
