nextcloud/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10G"
    ingress.kubernetes.io/proxy-body-size: "10G"
    # nginx.ingress.kubernetes.io/client-body-buffer-size: 512M # 1 megabyte
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    # nginx.ingress.kubernetes.io/proxy-buffer-size: "512M"
spec:
  rules:
  - host: cloud.sudojoss.com
    http:
      paths:
        - backend:
            serviceName: nextcloud
            servicePort: 443
  tls: 
  - secretName: sudojoss-tls
    hosts:
    - cloud.sudojoss.com
